# spec-kit-richard

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.github/workflows/scripts/: create-release-packages.ps1  create-release-packages.sh
docs/: installation.md  quickstart.md  upgrade.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  list-spec-folders.sh  mark-folder-status.sh  setup-plan.sh  start-implementation.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  list-spec-folders.ps1  mark-folder-status.ps1  setup-plan.ps1  start-implementation.ps1
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  design.md  implement.md  implement_all.md  plan.md  specify.md  tasks.md  taskstoissues.md
